--- a/website/ClientApp/public/index.html
+++ b/website/ClientApp/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CHDKT</title>
+    <title>Чернівецький фаховий коледж бізнесу та харчових технологій</title>
   </head>
   <body>
     <noscript>
