--- a/website/ClientApp/public/index.html
+++ b/website/ClientApp/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="Чернівецький фаховий коледж бізнесу та харчових технологій" content="Сайт чернівецького фахового коледжу бізнесу та харчових технологій!" />
+    <meta name="Чернівецький фаховий коледж бізнесу та харчових технологій" content="Сайт чернівецького фахового коледжу бізнесу та харчових технологій!" />
+    <meta name="Чернівецький фаховий коледж бізнесу та харчових технологій" content="Сайт чернівецького фахового коледжу бізнесу та харчових технологій!" />
+
+    <meta name="robots" content="noindex,nofollow">
     <meta name="theme-color" content="#000000">
     <base href="%PUBLIC_URL%/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
