--- a/website/ClientApp/public/index.html
+++ b/website/ClientApp/public/index.html
@@ -6,8 +6,10 @@
     <meta name="Чернівецький фаховий коледж бізнесу та харчових технологій" content="Сайт чернівецького фахового коледжу бізнесу та харчових технологій!" />
     <meta name="Чернівецький фаховий коледж бізнесу та харчових технологій" content="Сайт чернівецького фахового коледжу бізнесу та харчових технологій!" />
     <meta name="Чернівецький фаховий коледж бізнесу та харчових технологій" content="Сайт чернівецького фахового коледжу бізнесу та харчових технологій!" />
+    <meta name="Фаховий коледж бізнесу та харчових технологій" content="Сайт чернівецького фахового коледжу бізнесу та харчових технологій!" />
+    <meta name="Фаховий коледж бізнесу та харчових технологій" content="Сайт чернівецького фахового коледжу бізнесу та харчових технологій!" />
 
-    <meta name="robots" content="noindex,nofollow">
+    <meta name="robots" content="nofollow">
     <meta name="theme-color" content="#000000">
     <base href="%PUBLIC_URL%/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -30,7 +32,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      Сайт чернівецького фахового коледжу бізнесу та харчових технологій.
     </noscript>
     <div id="root"></div>
     <!--
